Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8300

unable create .lustre/lost+found/MDTxxxx if lost oi.16.xxx

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      If the oi.16.xxx file lost, then the osd_fid_lookup() will return -115 to the LFSCK when try to locate the object for creating ".lustre/lost+found/MDTxxxx". In fact, we know that such object does not exist, but forget to pass LOC_F_NEW to the OSD. That will cause the LFSCK cannot handle orphan objects under such case.

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: